add tamplate in email

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ tokio = { version = "1", features = ["full"] }
 regex = "1.10.2"
 lettre = {version = "0.11.2",  features = ["native-tls"]}
 clap = { version = "4.4.11", features = ["derive"] }
+askama = "0.12.1"
