--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.31"
+chrono = { version = "0.4.19", features = ["serde"] }
 inquire = { version = "0.6.2", features = ["date"] }
 serde = "1.0.193"
 serde_json = "1.0.108"
@@ -25,3 +25,7 @@ regex = "1.10.2"
 lettre = {version = "0.11.2",  features = ["native-tls"]}
 clap = { version = "4.4.11", features = ["derive"] }
 askama = "0.12.1"
+axum = "0.7.3"
+tracing = "0.1.40"
+tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
+tower-http = { version = "0.5.0", features = ["trace"] }
