Add custom error struct and condition for removing duplicate friend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,10 @@
             "username": "root",
             "askForPassword": true
         }
+    ],
+    "cSpell.words": [
+        "dotenv",
+        "dotenvy",
+        "sqlx"
     ]
 }
