--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ axum = "0.7.3"
 tracing = "0.1.40"
 tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
 tower-http = { version = "0.5.0", features = ["trace"] }
+thiserror = "1.0.56"
+axum-extra = "0.9.1"
+rand = "0.8.5"
